# libyuv_aar_wrapper

./: LICENSE  README.md  build_libyuv.sh  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libyuv/: build.gradle.kts
libyuv/src/main/cpp/: CMakeLists.txt  libyuv.cpp
libyuv/src/main/res/values/: strings.xml
